# PyAutoLens-Project

./: .gitignore  main.py  main_runner.py  main_runner_2_cpu.py  main_runner_cpu.py  modified_code.py  pyproject.toml  run_job.sh  run_job_2.sh  runfull.sh  submission.sub  submission_2.sub
config/: README.rst  general.yaml
config/non_linear/: nest.yaml
config/priors/: README.rst  cosmology.yaml
config/priors/ellipse/: README.rst  ellipse.yaml  ellipse_multipole.yaml
config/priors/galaxy/: README.rst  redshift.yaml
config/priors/image_mesh/: README.rst  hilbert.yaml  kmeans.yaml  overlay.yaml
config/priors/light/: README.rst
config/priors/mass/: README.rst
config/priors/mass/dark/: gnfw.yaml  (+6 more)
config/priors/mesh/: README.rst  rectangular_adapt_density.yaml  rectangular_adapt_image.yaml  rectangular_uniform.yaml
config/priors/regularization/: README.rst  adapt.yaml  adapt_split.yaml  matern_adapt_kernel.yaml  matern_adapt_kernel_rho.yaml  matern_kernel.yaml
config/visualize/: README.rst  mat_wrap.yaml
data/cowls/COSJ095950+022057/: positions.json
data/cowls/COSJ100012+022015/: positions.json
data/cowls/COSJ100018+022138/: positions.json
data/cowls/COSJ100024+021749/: positions.json  source_near_lens_centre.json
data/cowls/COSJ100028+021928/: source_near_lens_centre.json
data/slacs1250+0523/: data.fits  mask.fits  noise_map.fits  over_sampling.json  positions.json  psf.fits
slam_pipeline/: README.rst  __init__.py  light_lp.py  mass_light_dark.py  mass_total.py  model_util.py  source_lp.py  source_pix.py
slam_pipeline/subhalo/: detect.py
(+78 files in other folders)
