[project]
name = "pyautolens-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "autoarray>=2021.6.4.1",
    "autoconf>=2021.6.4.1",
    "autolens>=2026.2.26.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
]
